tests/errors/group-cont-assign-conflict.futil
// -p well-formed
import "primitives/core.futil";
import "primitives/memories/comb.futil";
component main() -> () {
  cells {
    r = std_reg(32);
    w1 = std_wire(32);
    w2 = std_wire(32);
  }
  wires {
    group do_r {
      r.write_en = 1'd1;
      r.in = 32'd10;
      do_r[done] = r.done;
    }
    r.in = w1.out;
  }
  control {
    do_r;
  }
}
