tests/errors/group-cont-assign-conflict.expect
---CODE---
1
---STDERR---
Error: tests/errors/group-cont-assign-conflict.futil
16 |    r.in = w1.out;
   |    ^^^^^^^^^^^^^^ Malformed Structure: Obviously conflicting assignments found
...
13 |      r.in = 32'd10;
   |      ^^^^^^^^^^^^^^ `r.in` is also written to here
...
19 |    do_r;
   |    ^^^^^ Assignments activated by group enable, causing the conflict
